--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,38 @@
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
 
-# Visual Studio
-.vs/
-.vscode/
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
-
-# .NET
-*.dll
-*.exe
-*.pdb
-*.cache
-project.lock.json
-project.fragment.lock.json
-artifacts/
-*.userprefs
-
-# Rider
-.idea/
-*.sln.iml
+# Build output
+dist/
+build/
 
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-appsettings.Development.json
-appsettings.Local.json
+.env.*.local
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Secrets
-secrets/
-*.key
-*.pem
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Test coverage
+# OS
+.DS_Store
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
+
+# Testing
 coverage/
-*.coverage
-*.coveragexml
-
-# Temporary files
-tmp/
-temp/
-*.tmp
-
-# NuGet
-*.nupkg
-**/packages/*
-!**/packages/build/
-*.nuget.props
-*.nuget.targets
-
-# Local History
-.localhistory/
-
-# Backup files
-*.bak
-*.backup
-
+.nyc_output/
