--- a/package.json
+++ b/package.json
@@ -21,29 +21,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "typeorm": "^0.3.17",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.21.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-async-errors": "^3.1.1"
+    "typeorm": "^0.3.17",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongodb": "^4.0.6",
+    "@types/node": "^20.10.6",
+    "@types/pg": "^8.15.6",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "ts-node": "^10.9.2"
+    "typescript": "^5.3.3"
   }
 }
-
