feat: implement natural language to Trino SQL query execution with new command, handler, clients, and prompt templates.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-cron": "^4.2.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "trino-client": "^0.2.9",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0"
   },
